# cpp-hw_02

./: CMakeLists.txt
main/include/: huffman.h
main/src/: huffman.cpp  main.cpp
test/data/: spaces.txt  zip War and Peace.txt  zip normal.txt  zip one letter.txt  zip spaces.txt
test/include/: doctest.h
test/src/: test.cpp
